# aviation-calc-util-ffi

./: Cargo.toml  README.md  build.rs  build.rs.bak  cbindgen.toml
.cargo/: config.toml
.github/workflows/: build-and-test.yml  tagged-release.yml
nugetinfo/: template.nuspec  template.targets
src/: lib.rs
src/atmos/: grib.rs  mod.rs
src/atmos/grib/: grib_data_point.rs  grib_tile.rs  grib_tile_manager.rs  mod.rs
src/aviation/: mod.rs
src/geo/: bearing.rs  geo_point.rs  geo_tile.rs  latitude.rs  longitude.rs  mod.rs
src/interop/: mod.rs
src/macros/: geo_tile.rs  mod.rs  number.rs  struct_as_object.rs
src/magnetic/: magnetic_field.rs  magnetic_model.rs  magnetic_model_coefficients.rs  magnetic_tile.rs  mod.rs
src/math/: legendre.rs  mod.rs  polynomial.rs
src/physics/: mod.rs
src/tests/: mod.rs
src/units/: acceleration.rs  angle.rs  angular_velocity.rs  length.rs  mod.rs  pressure.rs  temperature.rs  velocity.rs
