[package]
name = "aviation_calc_util_ffi"
version = "2.12.0"
edition = "2021"
build = "build.rs"
description = "A library to assist with aviation related calculations."
homepage = "https://github.com/997R8V10/aviation-calc-util-ffi"
authors = ["Prithvi Shivaraman"]
readme = "README.md"
repository = "https://github.com/997R8V10/aviation-calc-util-ffi"
license = "Apache-2.0 OR MIT"
keywords = ["aviation", "calculations"]
categories = ["aerospace::simulation", "mathematics", "science::geo"]

[lib]
crate-type = ["cdylib"]

[dependencies]
aviation_calc_util = "2.12.0"
paste = "1.0.14"